--- a/styles/site.css
+++ b/styles/site.css
@@ -2,12 +2,27 @@
 body {
   background-color: #eda51fe1;
   font-family: sans-serif;
+  font-size: large;
   margin: 0px;
   padding: 0px;
 }
 
 img {
   border-radius: 5%;
+  width: 200px;
+}
+
+.graphic {
+  font-size: small;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start;
+}
+
+.graphic a {
+  color: #000000;
+  text-decoration: none;
 }
 
 .head-content img {
